# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  12 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootmisc as a CRITICAL_SERVICE as too many init scripts don't
    depend on it, which means that /var/run and others could get cleaned after
    daemons write important things there - like pidfiles - when using parallel
    startup.

  10 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed some internal net dependencies with >1 active net service
    Services can now be scheduled on any inactive services.

  27 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Document that depend_eth0() only works in conf.d/net and
    not conf.d/net.$profile, #137727.

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modules-update generates the devfs config files properly #136174.

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modprobe.conf is generated properly when done by hand otheriwse 
    old syntax can leak in #132668 by Alexander Skwar.

  23 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Fix rc-status broken link reporting properly, #137656

    Replace grep with [[ $(</proc/foo) =~ reges ]]  where appropriate.

  19 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Preliminary support for dscape ieee80211 stack devices.

    Apply vserver patches from Benedikt Boehm.

  18 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Mount binfmt_misc automatically in localmount if available.

    Force stricter mount options on /proc /sys /dev/pts /proc/bus/usb as
    suggested by the PaX Team.

  18 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    vlan id's can now be treated as individual interfaces via init scripts
    provided they depend on the real interface, #137029

  15 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now supports the --verbose flag setting RC_VERBOSE="yes"